--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -13,7 +13,11 @@ jobs:
       matrix: ${{ steps.get-flakes.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4.1.1
-      - uses: DeterminateSystems/nix-installer-action@v10
+        - name: Install Nix
+          uses: cachix/install-nix-action@v26
+          with:
+            extra_nix_config: |
+              access-tokens = github.com=${{ secrets.GH_TOKEN }}
       - name: generate flake matrix
         id: get-flakes
         run: |
@@ -35,7 +39,6 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v26
         with:
-          nix_path: nixpkgs=channel:nixos-unstable-small
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GH_TOKEN }}
 
