ci: run flake-update weekly
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -3,7 +3,7 @@ name: Update Flakes
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 17 * * *" # At 17:00 UTC / 2 Midnight JP
+    - cron: "0 17 * * 0" # At 17:00 UTC / 2 Midnight JP on Sunday
 
 jobs:
   get-flakes:
