--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -20,3 +20,4 @@ jobs:
           pr-title: "Update flake.lock" # Title of PR to be created
           pr-labels: | # Labels to be set on the PR
             automated
+            keep-up-to-date
