--- a/cells/workstations/nixosProfiles/fcitx5/__config/conf/classicui.conf
+++ b/cells/workstations/nixosProfiles/fcitx5/__config/conf/classicui.conf
@@ -19,7 +19,7 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLanguageToDisplayText=True
 # Theme
-Theme=default
+Theme=rose-pine-moon
 # Dark Theme
 DarkTheme=default-dark
 # Follow system light/dark color scheme
