--- a/cells/workstations/nixosProfiles/fcitx5/__config/conf/classicui.conf
+++ b/cells/workstations/nixosProfiles/fcitx5/__config/conf/classicui.conf
@@ -3,11 +3,11 @@ Vertical Candidate List=False
 # Use mouse wheel to go to prev or next page
 WheelForPaging=True
 # Font
-Font="IosevkaQ Nerd Font Mono 10"
+Font="Iosevka q 10"
 # Menu Font
-MenuFont="IosevkaQ Nerd Font Mono 10"
+MenuFont="Iosevka q 10"
 # Tray Font
-TrayFont="IosevkaQ Nerd Font Mono 10"
+TrayFont="Iosevka q 10"
 # Tray Label Outline Color
 TrayOutlineColor=#000000
 # Tray Label Text Color
