direnv: change config
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,12 @@
-use_flake
+use_flake() {
+    watch_file flake.lock
+    watch_file flake.nix
+
+    mkdir -p $(direnv_layout_dir)
+
+    eval "$(nix print-dev-env \
+              --profile "$(direnv_layout_dir)/flake-profile" \
+               --option builders "")"
+}
+
+use flake
