flake: move devshell stuff
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,8 @@
 use_flake() {
     watch_file flake.lock
     watch_file flake.nix
+    watch_file cells/repo/devshells.nix
+    watch_file cells/repo/configs.nix
 
     mkdir -p $(direnv_layout_dir)
 
