ci: mergify: delete head branch after merging
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -21,6 +21,8 @@ pull_request_rules:
       - check-success=nixosConfig sforza
     actions:
       merge:
+        method: merge
+      delete_head_branch:
 
   - name: Warn on conflicts
     conditions:
