--- a/.github/workflows/flake-inputs-checker.yaml
+++ b/.github/workflows/flake-inputs-checker.yaml
@@ -18,6 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@V27
+      - uses: DeterminateSystems/nix-installer-action@main
       - name: Check Nix flake Nixpkgs inputs
         uses: DeterminateSystems/flake-checker-action@main
