--- a/.github/workflows/flake-update.yaml
+++ b/.github/workflows/flake-update.yaml
@@ -20,7 +20,7 @@ jobs:
           git-author-email: "lewdovico@gnuweeb.org"
           git-committer-name: "Ludovico Piero"
           git-committer-email: "lewdovico@gnuweeb.org"
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-msg: "chore: Update flake.lock" # The message provided with the commit
           pr-title: "Update flake.lock" # Title of PR to be created
           pr-labels: | # Labels to be set on the PR
