ci: update flake-update
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/workflows/flake-update.yaml
+++ b/.github/workflows/flake-update.yaml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.3
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@main
         with:
@@ -20,7 +20,7 @@ jobs:
           git-author-email: "lewdovico@gnuweeb.org"
           git-committer-name: "Ludovico Piero"
           git-committer-email: "lewdovico@gnuweeb.org"
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-msg: "chore: Update flake.lock" # The message provided with the commit
           pr-title: "Update flake.lock" # Title of PR to be created
           pr-labels: | # Labels to be set on the PR
