--- a/.github/workflows/flake-update.yaml
+++ b/.github/workflows/flake-update.yaml
@@ -15,11 +15,11 @@ jobs:
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@main
         with:
-          git-author-name: "Ludovico Piero"
-          git-author-email: "lewdovico@gnuweeb.org"
-          git-committer-name: "Ludovico Piero"
-          git-committer-email: "lewdovico@gnuweeb.org"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          git-author-name: "Maximilian Sforza"
+          git-author-email: "maximiliansforza@proton.me"
+          git-committer-name: "Maximilian Sforza"
+          git-committer-email: "maximiliansforza@proton.me"
+          token: ${{ secrets.PR_TOKEN }}
           commit-msg: "chore: Update flake.lock" # The message provided with the commit
           pr-title: "Update flake.lock" # Title of PR to be created
           pr-labels: | # Labels to be set on the PR
