fcitx5: change keybind for TriggerKeys
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/modules/fcitx5/config/config
+++ b/modules/fcitx5/config/config
@@ -9,7 +9,7 @@ ActivateKeys=
 DeactivateKeys=
 
 [Hotkey/TriggerKeys]
-0=Control+Shift_L+space
+0=Control+Shift+space
 
 [Hotkey/AltTriggerKeys]
 0=Page_Up
