--- a/.github/workflows/packages-update.yml
+++ b/.github/workflows/packages-update.yml
@@ -3,7 +3,7 @@ name: "Update Packages"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 15 * * *"
+    - cron: "0 15 * * 0"
 
 jobs:
   nvfetcher-update:
