packages: add tidal-hifi
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/workflows/packages-update.yml
+++ b/.github/workflows/packages-update.yml
@@ -52,6 +52,7 @@ jobs:
         packages:
           - iosevka-q
           - sarasa-gothic
+          - tidal-hifi
     steps:
       - name: Checkout
         uses: actions/checkout@v4
