--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,26 +1,14 @@
 pull_request_rules:
   - name: Automatic rebase for PRs marked as "keep-up-to-date"
     conditions:
-      - -draft # filter out draft PRs
-      - label="keep-up-to-date"
-      - "label!=CI:fail" # exclude PRs with "CI:fail" label
+      - label=keep-up-to-date
+      - -draft
     actions:
       update:
 
-  - name: Rebase pull requests once when labeled with "rebase"
-    conditions:
-      - label=rebase
-    actions:
-      rebase: {}
-      label:
-        remove:
-          - rebase
-
   - name: Automatic merge when CI passes
     conditions:
-      - "#approved-reviews-by>=1"
       - check-success=All Garnix checks
-      - -label=conflict # Prevent merging if PR has a "conflict" label
     actions:
       merge:
         method: rebase
@@ -33,38 +21,5 @@ pull_request_rules:
       comment:
         message: "@{{author}} this pull request is now in conflict 😩"
       label:
-        toggle:
+        add:
           - conflict
-
-  - name: Toggle labels based on CI state
-    conditions:
-      - check-failure=All Garnix checks
-    actions:
-      label:
-        toggle:
-          - "CI:fail"
-
-  - name: Remove "CI:fail" label when CI passes
-    conditions:
-      - check-success=All Garnix checks
-    actions:
-      label:
-        remove:
-          - "CI:fail"
-
-  - name: Add "WIP" label when the title contains "WIP"
-    conditions:
-      - title~=WIP
-    actions:
-      label:
-        toggle:
-          - WIP
-
-  - name: Close stale pull requests
-    conditions:
-      - updated-at<30 days ago
-      - -label=keep-open # Don't close PRs with this label
-    actions:
-      comment:
-        message: "This PR has been inactive for 30 days and will be closed soon. 💤"
-      close:
