--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,9 +1,9 @@
 pull_request_rules:
   - name: Automatic rebase for PRs marked as "keep-up-to-date"
     conditions:
-      - -draft # filter out draft PRs
-      - label="keep-up-to-date"
-      - "label!=CI:fail" # exclude PRs with "CI:fail" label
+      - label=keep-up-to-date
+      - label!=CI:fail
+      - -draft
     actions:
       update:
 
@@ -11,7 +11,7 @@ pull_request_rules:
     conditions:
       - "#approved-reviews-by>=1"
       - check-success=All Garnix checks
-      - -label=conflict # Prevent merging if PR has a "conflict" label
+      - label!=conflict
     actions:
       merge:
         method: rebase
@@ -24,41 +24,39 @@ pull_request_rules:
       comment:
         message: "@{{author}} this pull request is now in conflict 😩"
       label:
-        toggle:
+        add:
           - conflict
 
-  - name: Toggle labels based on CI state
+  - name: Add CI:fail label when CI fails
     conditions:
       - check-failure=All Garnix checks
     actions:
       label:
-        toggle:
-          - "CI:fail"
+        add:
+          - CI:fail
 
-  - name: Remove "CI:fail" label when CI passes
+  - name: Remove CI:fail label when CI passes
     conditions:
       - check-success=All Garnix checks
     actions:
       label:
         remove:
-          - "CI:fail"
+          - CI:fail
 
   - name: Add "WIP" label when the title contains "WIP"
     conditions:
       - title~=WIP
     actions:
       label:
-        toggle:
+        add:
           - WIP
 
   - name: Close stale pull requests
     conditions:
-      - updated-at<30 days ago
-      - -label=keep-open             # Don't close PRs with this label
-      - -is:merged                   # Don't close already merged PRs
-      - -is:draft                    # Don't close drafts
-      - comments=0                   # Optional: Only if there are no recent comments
-      - reviews=0                    # Optional: Only if there are no reviews
+      - updated-at<=30 days ago
+      - label!=keep-open
+      - -merged
+      - -draft
     actions:
       comment:
         message: "This PR has been inactive for 30 days and will be closed soon. 💤"
