--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -8,7 +8,7 @@ pull_request_rules:
 
   - name: Automatic merge when CI passes
     conditions:
-      - check-success=All Garnix checks
+      - check-success=nix-flake-check
     actions:
       merge:
         method: rebase
