firefox-ui-fix: use proton-style branch
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/packages/nvfetcher.toml
+++ b/packages/nvfetcher.toml
@@ -16,6 +16,7 @@ fetch.git = "https://github.com/catppuccin/fcitx5"
 
 [firefox-ui-fix]
 src.git = "https://github.com/black7375/Firefox-UI-Fix"
+src.branch = "proton-style"
 fetch.git = "https://github.com/black7375/Firefox-UI-Fix"
 
 [fuzzmoji]
