--- a/.github/workflows/packages-update.yml
+++ b/.github/workflows/packages-update.yml
@@ -16,10 +16,11 @@ jobs:
         with:
           token: "${{ secrets.PR_TOKEN }}"
 
-      - name: Install Nix
-        uses: cachix/install-nix-action@v31
+      - name: Install Lix
+        uses: DeterminateSystems/nix-installer-action@v17
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          diagnostic-endpoint: ''
+          source-url: 'https://install.lix.systems/lix/lix-installer-x86_64-linux'
 
       - name: Git config
         run: |
