ci: disable merge queue if author is a bot
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -6,6 +6,7 @@ queue_rules:
       - -merged
       - -closed
       - -draft
+      - -author~=\[bot\]$
     merge_conditions: []
     merge_method: rebase
     update_method: rebase
