--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/direnv,emacs,visualstudiocode,vim,git,patch
 # Edit at https://www.toptal.com/developers/gitignore?templates=direnv,emacs,visualstudiocode,vim,git,patch
 
+rebuild.sh
+
 ### direnv ###
 .direnv
 .envrc
