ci: delete branch after merge queue
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -23,6 +23,7 @@ pull_request_rules:
     conditions: []
     actions:
       queue:
+      delete_head_branch:
 
   - name: Toggle conflict label based on mergeability
     conditions:
