ci: stop rebasing on merged or closed PRs
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -16,6 +16,8 @@ pull_request_rules:
     conditions:
       - label=keep-up-to-date
       - -draft
+      - -merged
+      - -closed
     actions:
       update:
 
