mergify: do not merge PRs with WIP label
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -13,6 +13,7 @@ pull_request_rules:
       - check-success=All Garnix checks
       - -conflict
       - -draft
+      - -label=WIP
       - status-success=All Garnix checks
     actions:
       queue:
