chore: Clean up flake.nix and fix typos in module comments
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ tags
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/direnv,emacs,visualstudiocode,vim,git,patch
+
+.gemini/
+gha-creds-*.json
