--- a/packages/nvfetcher.toml
+++ b/packages/nvfetcher.toml
@@ -44,3 +44,12 @@ git.fetchSubmodules = true
 [firefox-csshacks]
 src.git = "https://github.com/MrOtherGuy/firefox-csshacks"
 fetch.git = "https://github.com/MrOtherGuy/firefox-csshacks"
+
+[blink-cmp]
+src.git = "https://github.com/saghen/blink.cmp"
+fetch.git = "https://github.com/saghen/blink.cmp"
+
+[blink-fuzzy-lib]
+src.git = "https://github.com/saghen/blink.cmp"
+fetch.git = "https://github.com/saghen/blink.cmp"
+cargo_locks = ["Cargo.lock"]
