ci: sign commits
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.github/workflows/package-update.yml
+++ b/.github/workflows/package-update.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
           title: "Automated package updates"
+          sign-commits: true
           body: |
             This PR combines:
             - nvfetcher source updates
