--- a/.github/workflows/build-nixosConfiguration.yaml
+++ b/.github/workflows/build-nixosConfiguration.yaml
@@ -21,13 +21,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install Lix
-        uses: DeterminateSystems/nix-installer-action@v21
-        with:
-          diagnostic-endpoint: ''
-          source-url: 'https://install.lix.systems/lix/lix-installer-x86_64-linux'
-          extra_nix_config: |
-            substituters = https://cache.garnix.io https://nyx.chaotic.cx https://cache.nixos.org/
-            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= cache.garnix.io:CTFPyKSLcx5RMJKfLo5EEPUObbA78b0YQ2DTCJXqr9g= nyx.chaotic.cx-1:HfnXSw4pj95iI/n17rIDy40agHj12WfF+Gqk6SonIT8= chaotic-nyx.cachix.org-1:HfnXSw4pj95iI/n17rIDy40agHj12WfF+Gqk6SonIT8=
+        uses: samueldr/lix-gha-installer-action@latest
 
       - uses: cachix/cachix-action@v16
         with:
