--- a/.github/workflows/flake-update.yaml
+++ b/.github/workflows/flake-update.yaml
@@ -16,10 +16,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Install Lix
-        uses: DeterminateSystems/nix-installer-action@v21
-        with:
-          diagnostic-endpoint: ''
-          source-url: 'https://install.lix.systems/lix/lix-installer-x86_64-linux'
+        uses: samueldr/lix-gha-installer-action@latest
 
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@main
