--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -17,10 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install Lix
-        uses: DeterminateSystems/nix-installer-action@v21
-        with:
-          diagnostic-endpoint: ''
-          source-url: 'https://install.lix.systems/lix/lix-installer-x86_64-linux'
+        uses: samueldr/lix-gha-installer-action@latest
 
       - name: Run nix fmt
         id: fmt
