--- a/.github/workflows/package-update.yml
+++ b/.github/workflows/package-update.yml
@@ -18,10 +18,7 @@ jobs:
           token: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Install Lix
-        uses: DeterminateSystems/nix-installer-action@v21
-        with:
-          diagnostic-endpoint: ""
-          source-url: "https://install.lix.systems/lix/lix-installer-x86_64-linux"
+        uses: samueldr/lix-gha-installer-action@latest
 
       - name: Git config
         run: |
