--- a/modules/services/i18n/config/conf/classicui.conf
+++ b/modules/services/i18n/config/conf/classicui.conf
@@ -19,7 +19,7 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLanguageToDisplayText=True
 # Theme
-Theme=catppuccin-mocha
+Theme=catppuccin-mocha-blue
 # Dark Theme
 DarkTheme=default-dark
 # Follow system light/dark color scheme
