--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,8 +19,8 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # Theming
-# env = HYPRCURSOR_THEME,Phinger Cursors (dark)
-# env = XCURSOR_THEME,Phinger Cursors (dark)
+env = HYPRCURSOR_THEME,phinger-cursors-light
+env = XCURSOR_THEME,phinger-cursors-light
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
 
@@ -41,6 +41,9 @@ exec-once = killall xdg-desktop-portal-hyprland; killall xdg-desktop-portal; /us
 
 # Authentication Agent (Polkit)
 exec-once = /usr/libexec/hyprpolkitagent
+
+# Set cursor
+exec-once=hyprctl setcursor phinger-cursors-light 24
 
 # Autostart Fcitx5 Daemon
 exec-once = fcitx5 -d --replace
