--- a/.config/portage/make.conf
+++ b/.config/portage/make.conf
@@ -27,10 +27,10 @@ USE="${USE} wayland X vulkan opengl"
 # Audio & Media
 USE="${USE} fonts bluetooth pipewire pulseaudio screencast ffmpeg"
 # Bloat
-USE="${USE} -cups -gps -geo -telemetry -accessibility -zeroconf -avahi -joystick -wacom -smartcard -ipod -ios -nvenc -3dfx -voodoo -altivec -neon -debug -test -aqua"
+USE="${USE} -cups -gps -geo -telemetry -accessibility -zeroconf -avahi -haptic -joystick -wacom -smartcard -ipod -ios -nvenc -3dfx -voodoo -altivec -neon -debug -test -aqua"
 
 # Localization
-L10N="id ja ko en zh-CN zh-TW"
+L10N="id ja ko en-US zh-CN zh-TW"
 
 GRUB_PLATFORMS="efi-64"
 # GENTOO_MIRRORS="http://tux.rainside.sk/gentoo/ https://gentoo.osuosl.org/"
